# calc-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  manual.txt
src/: calc_engine.rs  line_mode.rs  main.rs  plot_test.rs  render_help.rs  tui_mode.rs
src/tui_mode/: app.rs  helpers.rs  mod.rs  ui.rs
