[package]
name = "rustcalc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
unicode-segmentation = "1.10"
unicode-width = "0.1.0"
# Для TUI режима
crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.24", optional = true }

# Для консольного режима
termion = { version = "2.0", optional = true }

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
line = ["dep:termion"]
